--- a/news_scrap/templates/news_scrap/base.html
+++ b/news_scrap/templates/news_scrap/base.html
@@ -1,38 +1,39 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="utf-8" />
-  <title>News | {% block title %}{% endblock %}</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-  <script src="//cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
-  <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
-  <script src="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/js/bootstrap-datetimepicker.min.js"></script>
+    <title>News | {% block title %}{% endblock %}</title>
 
- </head>
- <body>
-  <h1>News base</h1>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <div class="container">
-      <div class="row">
-          <div class="col-md-6">
-            {% block content %}
-            {% endblock %}
-          </div>
-      </div>
-   </div>
+    <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
+  </head>
+
+  <body>
+    <nav class="nav justify-content-center">
+      <a class="nav-link" href="/"><h1>Index</h1></a>
+      <a class="nav-link" href="/news/"><h1>List</h1></a>
+    </nav>
+
+    <div class="container">
+        <div class="row justify-content-center">
+          {% block content %}
+          {% endblock %}
+        </div>
+     </div>
 
 
- 
-  <script>
-    $(function () {
-        $('.datetime-input').datetimepicker({
-            format:'YYYY-MM-DD HH:mm:ss'
-        });
-    });
-  </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/js/bootstrap-datetimepicker.min.js"></script>
 
- </body>
+  </body>
 </html>
