--- a/news_scrap/templates/news_scrap/create.html
+++ b/news_scrap/templates/news_scrap/create.html
@@ -1,4 +1,5 @@
 {% extends "news_scrap/base.html" %}
+{% load staticfiles %}
 
 {% block title %}Create{% endblock %}
 
@@ -8,4 +9,11 @@
     {{ form.as_p }}
     <input type="submit" value="Save" />
   </form>
+    <script>
+      $(function () {
+          $('.datetime-input').datetimepicker({
+              format:'YYYY-MM-DD HH:mm:ss'
+          });
+      });
+    </script>
 {% endblock %}
